[java] Fixing Java 8 compatibility issues